# SimpleGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
benchmarks/: CMakeLists.txt
cmake/: FindASSIMP.cmake  FindEPOXY.cmake  FindGLFW.cmake  FindSOIL.cmake  android-toolchain.cmake
docs/: lifetimes.md
helpers/: CMakeLists.txt
helpers/include/SimpleGL/helpers/: SimpleGLHelpers.h  camera.h  context.h  event.h  mesh.h  param.h  pbo.h  slab.h  transform.h
helpers/src/: camera.cc  context.cc  event.cc  mesh.cc  transform.cc
include/SimpleGL/: SimpleGL.h  camera.h  context.h  event.h  filesystem.h  format.h  fpscounter.h  math.h  mesh.h  param.h  pbo.h  resource-helpers.h  resource-old.h  resource.h  resource2.h  resourceinfo.h  sglconfig.h  shader.h  texture.h  traits.h  transform.h  utils.h  window-provider.h
src/: camera.cc  context.cc  event.cc  mesh.cc  sglconfig.cc  shader.cc  texture.cc  traits.cc  transform.cc  utils.cc
tests/: CMakeLists.txt  allocation-test.cc  context-test.cc  cube-test.cc  dejong-test.cc  fluid-test.cc  fluid2-test.cc  framebuffer-test.cc  game-of-life.cc  game-of-life.cc.autosave  instanced-test.cpp  key-test.cc  managed-test.cc  mouse-test.cc  overhead-test.cc  param-test.cc  pbo-test.cc  plane-test.cc  pointcloud-test.cc  resource-test.cc  scratch.cc  sgl-test.h  shader-test.cc  size-test.cc  texture-test.cc  traits-test.cc  ubo-test.cc  vertex-test.cc
tests/data/: dejong_fs.glsl  dejong_vs.glsl  fluid2_fs.glsl  fluid_fs.glsl  fs.glsl  game-of-life_fs.glsl  ident_vs.glsl  instanced_vs.glsl  pointcloud_fs.glsl  pointcloud_vs.glsl  texture_fs.glsl  vs.glsl
